--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "chalkboard",
+  "homepge": "http://sintheia100.github.io/chalkboard"
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -15,9 +16,11 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+ "predeploy": "npm run build",
+ "deploy": "gh-pages -d build",
+ "build": "react-scripts build",
+ "test": "react-scripts test",
+ "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -32,6 +35,7 @@
       "not op_mini all"
     ],
     "development": [
+      "gh-pages"
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
